--- a/Parilet/SupportingFiles/Info.plist
+++ b/Parilet/SupportingFiles/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>MBXAccessToken</key>
-	<string>pk.eyJ1IjoiMTN0aGFwb3N0bGUiLCJhIjoiY2xhZWx3OGpuMHY1NjNubWk5eWY2NjZpaiJ9.vNph4UQZpbgMaiEwMU4E5Q</string>
+	<string>pk.eyJ1IjoieXZhbmIiLCJhIjoiY2xhcXl6eTg5MDFrdzQwb3Z6OTAxeG9vcyJ9.f9bFprti9yDDWP1MigBL9Q</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
